Always force scrollbar to prevent jumps

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -1,3 +1,7 @@
+html {
+    @apply overflow-y-scroll;
+}
+
 body {
     @apply font-sans;
 }
